# law

./: .gitignore  CLAUDE.md  README.md  check_ids.py  debug_clean.py  debug_db.py  debug_inspect.py  debug_page.html  debug_page.py  debug_page_v2.py  debug_tabs.py  find_rule_url.py  find_rule_with_titles.py  gemini.md  get_url.py  headless_fix.py  pyproject.toml  reset_data.bat  run.bat  search_ord.html  temp_attachments_page.html  temp_law_page.html  test_result.txt  test_scrap_fix.py  test_scrapers_v2.py
docs/: ANTIGRAVITY_RUNTIME_GUIDE.md  ATOMIC_TASKS.md  COLLECTION_PLAN.md  CRITICAL_LOGIC.md  IMPROVEMENT_PLAN.md  PRD.md  REVIEW_AND_IMPROVEMENT.md  TRD.md  memory.md
docs/plans/: fix_readme_rendering.md
scripts/: check_legacy.py  migrate.py  migrate_data.py  migrate_meta.py  rag_index.py  rag_search.py  reclean_data.py  reexport_data.py  scrape_constitutional_sample.py  scrape_misc_samples.py  test_scourt_debug.py
scripts/check/: check_counts.py  check_db_schema.py  check_titles.py
scripts/debug/: check_db_counts.py  check_missing.py  check_missing_body.py  check_summary.py  count_missing.py  debug_duplicates.py  debug_search.html  get_schema.py  search.html  search_result.html  search_statute.html  test_law_paging.py  test_logic_mock.py  test_scourt_fix.py  verify_rag.py  verify_sharding_init.py
scripts/find/: find_rule.py
scripts/fix/: fix_bat.py
scripts/research/: debug_scourt_api.py  research_dom.py
scripts/test/: test_all_sources.py  test_pdf.py  test_scraper.py
tests/: conftest.py  test_db_quality.py  test_rag_quality.py  test_utils_text.py
(+20 files in other folders)
