[project]
name = "law"
version = "0.1.0"
description = "Korean legal data scraper for NotebookLM RAG"
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.49",
    "textual>=1.0",
    "aiosqlite>=0.20",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.10",
    "rich>=13.0",
    "httpx>=0.28.1",
]

[project.scripts]
law = "law.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/law"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "ruff>=0.8",
]
